# app/backend/user-service/handlers/v1/mediagrp/paths.go
@@ -2,11 +2,12 @@ package mediagrp
 
 const PostPath = "/v1/media"
 
+const PostMultiple = "/v1/media/many"
+
 const GetPath = "/v1/media/{" + MediaID + "}"
 
 const GetByIDsPath = "/v1/media"
 
 const DeletePath = "/v1/media/{" + MediaID + "}"
-
 
 const MediaID = "mediaID"
