# docs/swagger.json
@@ -80,7 +80,7 @@
                 "tags": [
                     "media"
                 ],
-                "summary": "Upload a media file",
+                "summary": "Upload multiple media file",
                 "parameters": [
                     {
                         "type": "file",
@@ -94,7 +94,10 @@
                     "201": {
                         "description": "Created",
                         "schema": {
-                            "$ref": "#/definitions/github_com_St3plox_Blogchain_business_core_media.Media"
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/github_com_St3plox_Blogchain_business_core_media.Media"
+                            }
                         }
                     },
                     "400": {
@@ -597,6 +600,18 @@
                 "content": {
                     "type": "string"
                 },
+                "media_names": {
+                    "type": "array",
+                    "items": {
+                        "type": "string"
+                    }
+                },
+                "media_urls": {
+                    "type": "array",
+                    "items": {
+                        "type": "string"
+                    }
+                },
                 "tags": {
                     "type": "array",
                     "items": {
@@ -625,6 +640,13 @@
                 },
                 "id": {
                     "$ref": "#/definitions/big.Int"
+                },
+                "media": {
+                    "description": "[name]url",
+                    "type": "object",
+                    "additionalProperties": {
+                        "type": "string"
+                    }
                 },
                 "tags": {
                     "type": "array",
